<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".CartLabActivity">

    <TextView
        android:id="@+id/textViewCartName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_24_7_healthcare"
        android:textColor="@color/purple_200"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.037" />

    <TextView
        android:id="@+id/textView_logo6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/deliver_location_pretoria"
        android:textColor="@color/colorWhite"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewCartPackageName"
        app:layout_constraintVertical_bias="0.047"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textViewCartPackageName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/lab_test_cart_item"
        android:textColor="@color/yellowLight"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewCartName"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="MissingConstraints" />

    <ListView
        android:id="@+id/listViewCart"
        android:layout_width="341dp"
        android:layout_height="329dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="32dp"
        android:editable="false"
        android:ems="10"
        android:gravity="start|top"
        android:inputType="textMultiLine"
        android:padding="10dp"
        android:text="@string/hi_nhello"
        android:textColor="@color/colorWhite"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/textView_logo6"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="@+id/textView_logo6"
        app:layout_constraintTop_toBottomOf="@+id/textView_logo6"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/buttonLDAddToCart"
        android:layout_width="155dp"
        android:layout_height="52dp"
        android:text="@string/checkout"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.835"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonCartTimePicker"
        app:layout_constraintVertical_bias="0.48" />

    <Button
        android:id="@+id/buttonCartBack"
        android:layout_width="144dp"
        android:layout_height="52dp"
        android:text="@string/back"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.116"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonCartDatePicker"
        app:layout_constraintVertical_bias="0.48" />

    <TextView
        android:id="@+id/textViewCartDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/select_deliver_date"
        android:textColor="@color/yellowLight"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.109"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewCartTotalPrice"
        app:layout_constraintVertical_bias="0.073" />

    <TextView
        android:id="@+id/textViewCartTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/select_delivery_time"
        android:textColor="@color/yellowLight"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.851"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewCartTotalPrice"
        app:layout_constraintVertical_bias="0.07" />

    <Button
        android:id="@+id/buttonCartDatePicker"
        style="?android:spinnerStyle"
        android:layout_width="153dp"
        android:layout_height="50dp"
        android:text="@string/_27_06_2023"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.124"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewCartDate"
        app:layout_constraintVertical_bias="0.078" />

    <Button
        android:id="@+id/buttonCartTimePicker"
        style="?android:spinnerStyle"
        android:layout_width="155dp"
        android:layout_height="50dp"
        android:text="@string/_00_00"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.835"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewCartTime"
        app:layout_constraintVertical_bias="0.078" />

    <TextView
        android:id="@+id/textViewCartTotalPrice"
        android:layout_width="243dp"
        android:layout_height="32dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/total_cost_r1398"
        android:textColor="@color/colorWhite"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/listViewCart"
        app:layout_constraintVertical_bias="0.135" />

</androidx.constraintlayout.widget.ConstraintLayout>